# img2file

./: .gitignore  CMakeLists.txt  README.md  install.bat  uninstall.bat
.github/workflows/: release.yml
src/: main.cpp
